docs: Update documentation for new maintainership (closes #15)
This comprehensive documentation update addresses issue #15 by updating all references from the original Whisky project to the frankea/Whisky community fork.

## Changes Summary

### Core Documentation Updates
- README.md: Updated build badge, wiki links, and sponsor information
- FUNDING.yml: Changed from ko_fi to GitHub Sponsors (frankea)
- Added SECURITY.md with GitHub's private vulnerability reporting

### Discord Removal
- Removed all Discord references (no Discord server exists)
- Replaced with GitHub Issues as the primary support channel
- Updated Help menu in WhiskyApp.swift
- Added help.issues localization key for 22 languages

### Bug Report Template Updates
- Added macOS Sequoia (macOS 15) to version dropdown
- Updated issue template config.yml

### Workflow Updates
- Removed Discord webhook from Release.yml
- Fixed AutoAssign.yml username (afranke → frankea)

### Documentation
- DOCUMENTATION_AUDIT.md: Comprehensive audit tracking all changes
- Created issue #31 for infrastructure decisions (getwhisky.app dependencies)

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,5 @@
 blank_issues_enabled: false
-- name: Discord Support
-    url: https://discord.gg/K4AQukwAke
-    about: Please ask for support first to confirm the issue before submitting a report.
+contact_links:
+  - name: GitHub Issues
+    url: https://github.com/frankea/Whisky/issues
+    about: Search existing issues or open a new one for bug reports and feature requests.
